Closed
Bug 33821
Opened 25 years ago
Closed 25 years ago
cnn.com crash in nsDNSLookup::CompletedLookup
Categories
(Core :: Networking, defect, P3)
Tracking
()
VERIFIED
FIXED
M16
People
(Reporter: chofmann, Assigned: gordon)
References
()
Details
(Keywords: crash, top100, topcrash, Whiteboard: [nsbeta2+]2d)
Chris Hofmann wrote:
Gordon,
A top talkback crash in the last couple of days looks like it might be
associated with these changes....
1.45 <gordon@netscape.com> 27 Mar 2000 14:19
Landing DNS_CANCEL_BRANCH. Enable canceling of dns lookup requests, and
underly
ing structure for possible DNS cache. Original changes by warren, gordon. r =
gagan
Do you know if this crash has been resolved?
or is it something that needs to be investigated.
thanks
Chris Hofmann wrote:
2000032906
2000032506
Top crash data from Netscape6 builds since 2000032506
Total blackboxes in this sample
69 N6datasample
Total unique users
41
Top crashes
7 nsPluginTag::nsPluginTag
5 nsDNSLookup::CompletedLookup
4 nsAutoString::nsAutoString
4 FrameManager::HandlePLEvent()
3 nsMimeBaseEmitter::nsMimeBaseEmitter
2 ntdll.dll
2 nsImapMailFolder::ParseAdoptedHeaderLine
2 libpthread.so.0
2 StyleSetImpl::CantRenderReplacedElement
2 FrameManager::HandlePLEvent
2 CMT_SetSavePrefsCallback
2 0x00000004
2 .__ptr_glue
1 nsXBLService::LoadBindings
1 nsTreeFrame::ContainsFlexibleColumn
1 nsNNTPHost::CleanUp
1 nsMenuPopupFrame::AdjustClientXYForNestedDocuments
1 nsHistoryEntry::Compare
1 nsFontMetricsWin::SameAsPreviousMap
1 nsComponentManagerImpl::CreateInstance
nsDNSLookup::CompletedLookup
nsDNSLookup::CompletedLookup 9ce8f2e1
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/dns/src/nsDnsService
.cpp line 579
Build: 2000032809 CrashDate: 2000-03-29 UptimeMinutes: 35 Total: 62
OS: Windows NT 4.0 build 1381
URL: http://www.cnn.com/
Comment: Mozilla stopped to react on clicks and crashed on exit
->stack trace @
http://cyclone/reports/stackcommentemail.cfm?dynamicBBID=7582024
nsDNSLookup::CompletedLookup 9ce8f2e1
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/dns/src/nsDnsService
.cpp line 579
Build: 2000032809 CrashDate: 2000-03-29 UptimeMinutes: 18 Total: 81
OS: Windows NT 4.0 build 1381
URL: http://www.cnn.com/
Comment: Crash on exit
->stack trace @
http://cyclone/reports/stackcommentemail.cfm?dynamicBBID=7582221
nsDNSLookup::CompletedLookup f5356ba5
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/dns/src/nsDnsService
.cpp line 579
Build: 2000032809 CrashDate: 2000-03-28 UptimeMinutes: 22 Total: 22
OS: Windows NT 4.0 build 1381
URL: http://www.cnn.com/
Comment: After leaving Mozilla with CNN open for about 10 minutes it
stopped reacting on clicks. It crashed on exit
->stack trace @
http://cyclone/reports/stackcommentemail.cfm?dynamicBBID=7573425
nsDNSLookup::CompletedLookup 9ce8f2e1
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/dns/src/nsDnsService
.cpp line 579
Build: 2000032809 CrashDate: 2000-03-28 UptimeMinutes: 6 Total: 6
OS: Windows NT 5.0 build 2195
URL:
Comment: errored on close
->stack trace @
http://cyclone/reports/stackcommentemail.cfm?dynamicBBID=7573564
nsDNSLookup::CompletedLookup 9ce8f2e1
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/dns/src/nsDnsService
.cpp line 584
Build: 2000032809 CrashDate: 2000-03-28 UptimeMinutes: 11 Total: 11
OS: Windows NT 5.0 build 2195
URL:
Comment:
->stack trace @
http://cyclone/reports/stackcommentemail.cfm?dynamicBBID=7572288
| Reporter | ||
Updated•25 years ago
|
Keywords: topcrash
Summary: crash in nsDNSLookup::CompletedLookup → crash in nsDNSLookup::CompletedLookup
| Reporter | ||
Comment 1•25 years ago
|
||
And the stack trace looks like
Incident ID 7597538
nsDNSLookup::CompletedLookup
[d:\builds\seamonkey\mozilla\netwerk\dns\src\nsDnsService.cpp, line 579]
nsDNSLookup::CompletedEntry
[d:\builds\seamonkey\mozilla\netwerk\dns\src\nsDnsService.cpp, line 1146]
_hashEnumerate [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp, line 90]
PL_HashTableEnumerateEntries [plhash.c, line 369]
nsHashtable::Enumerate [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp,
line 219]
Looks like the mRequest field in the lookup is bogus when we're called from
Shutdown(). The user is probably quiting while there is still an outstanding
lookup (pretty easy with www.cnn.com). Perhaps the lookup is completing in the
middle of shutdown. It looks like we might not be properly protecting the
deletion of lookups upon completion. I'll add some checks and do additional
testing.
Status: NEW → ASSIGNED
| Reporter | ||
Updated•25 years ago
|
URL: http://www.cnn.com
Keywords: top100
Summary: crash in nsDNSLookup::CompletedLookup → cnn.com crash in nsDNSLookup::CompletedLookup
Updating [beta2+] in Status Summary to [nsbeta2+]
Keywords: beta2
Whiteboard: [beta2+]2d → [nsbeta2+]2d
Chris, how can I run your "top crashers" talkback report? I'd like to verify
that this is still a problem, but I'm having difficulty reproducing it.
A fix has been checked in, but it might be difficult to verify until bug 17390
has been fixed.
Comment 8•25 years ago
|
||
Per Gordon's comments, waiting on 17390
Updated•25 years ago
|
Status: RESOLVED → VERIFIED
Comment 9•25 years ago
|
||
verif.
You need to log in
before you can comment on or make changes to this bug.
Description
•