Reorder shutdown of DNS and SocketTransport services to allow the DNS service to notify socket transports that outstanding lookups are going away.Part of fix for bug 33821 and 34663.